# backend/types/order.types.ts
@@ -1,0 +1,19 @@
+// import { Product } from "./product.types";
+// import { User } from "./user.types";
+
+// interface CartItem {
+//   product: Product;
+//   quantity: number;
+// }
+
+// interface Cart {
+//   userId: User['_id'];
+//   items: CartItem[];
+//   totalQuantity: number;
+//   subtotal: number;
+//   tax: number;
+//   shippingCost: number;
+//   totalPrice: number;
+// }
+
+// export { Cart, CartItem };
